US666/US665 Wrap radio buttons in label & set css to prevent word wrap

--- a/app/scss/calendar/quickview/_qvFileUploadMenu.scss
+++ b/app/scss/calendar/quickview/_qvFileUploadMenu.scss
@@ -161,3 +161,8 @@
 
 
 }
+
+.radioButtonWrapper
+{
+    white-space: nowrap;    
+}
